--- a/index.html
+++ b/index.html
@@ -62,9 +62,15 @@
 	</header>
 	<!-- end header -->
 	<main class="main">
-		<section class="section--send">
+		<section class="section--send section">
 			<artical class="content">
-				
+				<div class="span1of2">
+					<h2 class="">Send better email</h2>
+					<p>
+						Whether you need to sell your products, share some big news, or tell a story, our campaign builder makes it easy to create an <a href="https://mailchimp.com/email-marketing/" class="cta-link bold">email marketing campaign</a>  that best suits your message.
+					</p>
+				</div>
+				<div class="bg-image lazyload loading loaded" style="background-image: url(images/collage-send-2x.jpgco);"></div>
 			</artical>
 		</section>
 
